feat(me): add /me route
